--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -68,4 +68,8 @@ endpoints: {
     uri: ${?SUMO_LOGS_URI}
     default: true
   }
+  metrics: {
+    uri: ${?SUMO_METRICS_URI}
+    default: true
+  }
 }
