--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,16 +22,18 @@ sumopush: {
     delayFactor: ${?API_RETRY_DELAY_FACTOR}
     delayMax: 120000
     delayMax: ${?API_RETRY_DELAY_MAX}
+    maxAttempts: 10
   }
   metricsPort: 8080
   metricsPort: ${?METRICS_SERVER_PORT}
   encoding: "gzip"
   encoding: ${?HTTP_ENCODING}
+  streams.max: 100000
   grouped.size: 1000
   grouped.size: ${?GROUPED_SIZE}
   grouped.duration: 1s
   grouped.duration: ${?GROUPED_DURATION}
-  send.buffer: 10000
+  send.buffer: 100000
   send.buffer: ${?SEND_BUFFER}
   container.exclusions: ""
   container.exclusions: ${?CONTAINER_EXCLUSIONS}
