Move source name/category overrides to endpoint

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -65,20 +65,21 @@ akka: {
 }
 endpoints: {
   logs: {
+    uri: "http://sumologic.com/ingest/logs"
     uri: ${?SUMO_LOGS_URI}
     default: true
   }
-  metricsFirst: {
-    uri: "http://sumo.com/ingest/go"
+  metrics: {
+    uri: "http://sumologic.com/ingest/metrics"
     fieldName: "name"
     fieldPattern: "container.+"
   }
   metricsSecond: {
-    uri: "http://sumo.com/ingest2/go"
-    default: true
+    uri: "http://sumologic.com/ingest/metrics2"
+    fieldPattern: "kubeapi.+"
   }
   metricsThird: {
-    uri: "http://sumo.com/ingest3/go"
+    uri: "http://sumologic.com/ingest/metrics3"
     fieldPattern: "blah.*"
   }
 }
