--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,15 +7,15 @@ replicas: 1
 dataType: logs
 groupedSize: 30000
 groupedDuration: '1s'
-endpointsSecret: endpoints-logs
+endpointsSecret: null
 
 servicemonitor:
   labels: {}
 
 kafka:
   bootstrapServers: localhost:9092
-  topic: sumo-push-logs
-  consumerGroup: sumopush-logs
+  topic: kafka-push-logs
+  consumerGroup: kafka-push-logs
 
 autoscale:
   type: keda
@@ -26,6 +26,6 @@ autoscale:
     cooldownPeriod: 1200
     pollingInterval: 30
     lagThreshold: '90'
-    prometheus: http://thanos-query.{{ .Values.cluster }}-zaidan.svc:10902
+    prometheus: http://localhost:9090
   hpa:
     cpuThreshold: 90
