--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -37,24 +37,29 @@ spec:
               value: {{ .Values.kafka.consumerGroup }}
             - name: SUMO_LOG_LEVEL
               value: {{ .Values.logLevel }}
+            {{- if .Values.cluster }}
             - name: CLUSTER_NAME
               value: {{ .Values.cluster }}
+            {{- end }}
             - name: DATA_TYPE
               value: {{ .Values.dataType }}
             - name: GROUPED_SIZE
               value: {{ .Values.groupedSize | quote }}
             - name: GROUPED_DURATION
               value: {{ .Values.groupedDuration | quote }}
+            {{- if .Values.logs.uri }}
+            - name: SUMO_LOGS_URI
+              value: {{ .Values.logs.uri }}
+            {{- end }}
+            {{- if .Values.metrics.uri }}
+            - name: SUMO_METRICS_URI
+              value: {{ .Values.metrics.uri }}
+            {{- end }}
           image: {{ .Values.image }}
           imagePullPolicy: Always
           name: push
           resources:
-            limits:
-              cpu: '1500m'
-              memory: 2Gi
-            requests:
-              cpu: 500m
-              memory: 512Mi
+{{ toYaml .Values.resources | indent 12 }}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           {{- if .Values.endpointsSecret }}
