--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,9 +8,23 @@ dataType: logs
 groupedSize: 30000
 groupedDuration: '1s'
 endpointsSecret: null
+resources:
+  limits:
+    cpu: '2'
+    memory: 2Gi
+  requests:
+    cpu: '1'
+    memory: 512Mi
 
 servicemonitor:
   labels: {}
+
+cluster: null
+
+logs:
+  uri: null
+metrics:
+  uri: null
 
 kafka:
   bootstrapServers: localhost:9092
@@ -18,7 +32,7 @@ kafka:
   consumerGroup: kafka-push-logs
 
 autoscale:
-  type: keda
+  type: hpa
   minReplicaCount: 1
   maxReplicaCount: 8
   keda:
