enable the connection checker and move the metrics cache actor watch

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,6 +53,10 @@ akka: {
     commit-timeout: 30s
     commit-timeout: ${?KAFKA_CONSUMER_COMMIT_TIMEOUT}
     stop-timeout: 0
+    connection-checker: {
+      enable: true
+      max-retries: 10
+    }
   }
   http.host-connection-pool: {
     max-connections: 50
