--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -16,6 +16,12 @@ resources:
     cpu: '1'
     memory: 512Mi
 
+extraVolumes: []
+
+extraVolumeMounts: []
+
+extraEnvVars: []
+
 servicemonitor:
   enabled: true
   labels: {}
@@ -31,6 +37,7 @@ kafka:
   bootstrapServers: localhost:9092
   topic: kafka-push-logs
   consumerGroup: kafka-push-logs
+  serdeClass: null
 
 autoscale:
   type: hpa
