Add namespaces endpoints config

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -73,6 +73,7 @@ endpoints: {
     uri: "http://sumologic.com/ingest/metrics"
     fieldName: "name"
     fieldPattern: "container.+"
+    default: false
   }
   metricsSecond: {
     uri: "http://sumologic.com/ingest/metrics2"
