--- a/.github/workflows/dev_builds.yml
+++ b/.github/workflows/dev_builds.yml
@@ -11,11 +11,23 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.0.0
+      - name: Set up Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2.0.0
+      - name: Show Buildx platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Extract tag
         id: extract_tag
         run: echo "::set-output name=tag::$(echo $(git describe --tags --always))"
       - name: Print Tag
         run: echo "Running dev build for  ${{ steps.extract_tag.outputs.tag }}"
+      - name: Login to ECR
+        run: make login-ecr
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.0.0
         with:
