--- a/.github/workflows/release_builds.yml
+++ b/.github/workflows/release_builds.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.0.0
+      - name: Set up Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2.0.0
+      - name: Show Buildx platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Extract tag
         id: extract_tag
         run: echo "::set-output name=tag::$(echo $(git describe --tags --always))"
